1) Get suggestion button clicked, then hide search block 2) Added Loading symbol 3) changed marker and label 4) Hide/show search, filter block 5) Tab not showing issue solved 6) changed person image 7) calender issue solved 8) Error message changed 9) Home icon changed to globe icon 10) Globe button clicked then redirected to search page

--- a/TrippismUI/app/Styles/css/Style.css
+++ b/TrippismUI/app/Styles/css/Style.css
@@ -1,4 +1,4 @@
-﻿html, body, #map_canvas {margin: 0;padding: 0;height: 100%;}
+html, body, #map_canvas {margin: 0;padding: 0;height: 100%;}
 body{font-family: 'Conv_gotham-book'; background-color:transparent; overflow-x:hidden; position:relative;}
 body, html{height:100%;}
 ul{ list-style:none; margin:0; padding:0;}
@@ -6,7 +6,7 @@ a,a:hover,a:focus,label,form-control,.form-control:focus,.btn,button,.popular-de
 
 .red-bg{ background-color:#ff1e1e;}
 .balck-bg{ background-color:#222221;}
-.icons {border-radius: 100%;box-shadow: 1px 2px 4px rgba(0, 0, 0, 0.09);display: block;height: 45px;padding: 11px;text-align: center;width: 45px;overflow:hidden;}
+.icons {border-radius: 100%;box-shadow: 1px 2px 4px rgba(0, 0, 0, 0.09);display: block;height: 45px;padding: 9px 10px;text-align: center;width: 45px;overflow:hidden;}
 .btn-box{margin: auto; text-align:center; position:absolute; left:0; right:0; top:100%;}
 .toggle-btn { cursor:pointer; display:inline-block; border-radius: 0 0 2px 2px;color: #fff;font-family: "Conv_Gotham-Black"; font-size: 18px;padding: 8px 20px;text-transform: uppercase;z-index: 1;}
 .toggle-btn:hover,.toggle-btn:focus{color:#fff;}
@@ -18,8 +18,11 @@ a,a:hover,a:focus,label,form-control,.form-control:focus,.btn,button,.popular-de
 .btn-danger:focus, .btn-danger.focus {background-color: #fff;border-color: #fff;color: #ff1e1e;}
 .form-control{background-position:center bottom;-moz-background-position:center bottom;-webkit-background-position:center bottom;-khtml-background-position:center bottom;-o-user-background-position:center bottom;background-color:transparent; border-width:0px; border-color:#fff; height:50px; font-size:12px; text-transform:uppercase; color:#fefefe; border-radius:0px;  background-image: linear-gradient(#ff1e1e, #ff1e1e), linear-gradient(#fff, #fff);background-image: -webkit-linear-gradient(#ff1e1e, #ff1e1e), -webkit-linear-gradient(#fff, #fff);background-repeat: no-repeat;background-size: 0 1px, 100% 3px;padding:10px 50px 10px 15px;-webkit-transition: background 0s ease-in-out;-moz-transition: background 0s ease-in-out;-ms-transition: background 0s ease-in-out;-o-transition: background 0s ease-in-out;transition: background 0s ease-in-out;}
 .form-control:focus{ border-color:transparent; box-shadow:none; background-size: 100% 3px, 100% 1px;-o-background-size: 100% 3px, 100% 1px;-moz-background-size: 100% 3px, 100% 1px;-webkit-background-size: 100% 3px, 100% 1px;background-size: 100% 3px, 100% 1px;background-image: linear-gradient(#ff1e1e, #ff1e1e), linear-gradient(#fff, #fff);background-image: -webkit-linear-gradient(#ff1e1e, #ff1e1e), -webkit-linear-gradient(#fff, #fff);}
-.input-box i {background-position: right top;background-repeat: no-repeat;height: 20px;margin-top: -10px;position: absolute;right: 30px;top: 50%;width: 20px;}
-
+.input-box{
+	position:relative;
+}
+.input-box i.icon-box {background-position: right top;background-repeat: no-repeat;height: 20px;margin-top: -10px;position: absolute;right: 30px;top: 50%;width: 20px;}
+.input-box span.glyphicon {margin-top: -10px;position: absolute;right: 30px;top: 50%;color:#FFF;}
 .slide-top{ position:relative;}
 .slide-content-top{position:relative; display:none;}
 .slide-bottom {position:absolute; left:0; right:0; bottom:0; margin-bottom:40px;}
@@ -33,8 +36,8 @@ a,a:hover,a:focus,label,form-control,.form-control:focus,.btn,button,.popular-de
 .user-btn{margin-left:13px;}
 .user-btn .icons{padding:0;}
 .user-btn .icons img{ width:100%;}
-.dropdown-menu{  border:0px; max-width:181px; margin-top:10px; background-color:#e8e8e8;box-shadow:1px 2px 2px rgba(0, 0, 0, 0.3);}
-.dropdown-menu:before {border-color: transparent transparent #e8e8e8;border-style: solid;border-width: 0 8px 8px;content: "";height: 0;left: 15px;position: absolute;top: -6px;width: 0;}
+.dropdown-menu{  border:0px; margin-top:10px; background-color:#FFFFFF; box-shadow:1px 2px 2px rgba(0, 0, 0, 0.3);}
+.dropdown-menu:before {border-color: transparent transparent #FFFFFF;border-style: solid;border-width: 0 8px 8px;content: "";height: 0;left: 15px;position: absolute;top: -6px;width: 0;}
 .dropdown-menu > li{ border-top:1px solid #dcdcdc;}
 .dropdown-menu > li:first-child{ border-top:0px;}
 .dropdown-menu > li > a {color: #585858;font-weight: inherit;padding: 10px 20px;}
@@ -61,6 +64,30 @@ a,a:hover,a:focus,label,form-control,.form-control:focus,.btn,button,.popular-de
  i.location.active,.input-box:hover i.location{ background-image:url(../images/location-icon-hover.png);}
  i.calendar.active,.input-box:hover i.calendar{ background-image:url(../images/calendar-icon-hover.png);}
 
+.fa-spin-custom, .glyphicon-spin {
+    -webkit-animation: spin 1000ms infinite linear;
+    animation: spin 1000ms infinite linear;
+}
+@-webkit-keyframes spin {
+    0% {
+        -webkit-transform: rotate(0deg);
+        transform: rotate(0deg);
+    }
+    100% {
+        -webkit-transform: rotate(359deg);
+        transform: rotate(359deg);
+    }
+}
+@keyframes spin {
+    0% {
+        -webkit-transform: rotate(0deg);
+        transform: rotate(0deg);
+    }
+    100% {
+        -webkit-transform: rotate(359deg);
+        transform: rotate(359deg);
+    }
+}
 
 .popular-destinations .toggle-btn{ bottom:100%; top:auto; width:100%;padding-left: 10px;border-radius: 2px;}
 .toggle-btn i.destinations-icon{ background-position:-37px 0;}
@@ -218,45 +245,3 @@ a,a:hover,a:focus,label,form-control,.form-control:focus,.btn,button,.popular-de
 .attractions-found .destinations-list h6{ color:#fff;}
 .attractions-found .destinations-details-list li p{ color:#989898;}
 
-
-
-/* css by triveni*/
-tbody {
-    display:block;
-    height:200px;
-    overflow:auto;
-}
-thead, tbody tr {
-    display:table;
-    width:100%;
-    table-layout:fixed;
-}
-table {
-    width: 100%;
-}
-.ytube tbody {
-    height:auto !important;
-}
-    .ytube tbody > tr > td {border:0px;
-    }
-
-
-.map {height: 100%;}
-#wrapper {height:700px;max-height:1250px;}
-.airport-details-form .dropdown-menu {max-width:initial;}
-.dispblock {display:block;}
-  .glyphicon-refresh-animate {
-    -animation: spin .7s infinite linear;
-    -webkit-animation: spin2 .7s infinite linear;
-}
-
-@-webkit-keyframes spin2 {
-    from { -webkit-transform: rotate(0deg);}
-    to { -webkit-transform: rotate(360deg);}
-}
-
-@keyframes spin {
-    from { transform: scale(1) rotate(0deg);}
-    to { transform: scale(1) rotate(360deg);}
-}
-    /* css by triveni ends*/
